# geoportal

./: .prettierignore  .prettierrc  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml
backend/src/geoportal/: main.py
backend/src/geoportal/config/: get_settings.py  settings.py
backend/src/geoportal/core/: security.py
backend/src/geoportal/db/: associations.py  base_class.py  models.py  session.py
backend/src/geoportal/modules/auth/: crud.py  dependencies.py
backend/src/geoportal/modules/auth/api/v1/: router.py  schemas.py
backend/src/geoportal/modules/health/api/v1/: router.py  schemas.py
backend/src/geoportal/modules/proxy/api/v1/: router.py
backend/src/geoportal/modules/roles/: crud.py  models.py
backend/src/geoportal/modules/roles/api/v1/: router.py  schemas.py
backend/src/geoportal/modules/users/: crud.py  models.py
backend/src/geoportal/modules/users/api/v1/: router.py  schemas.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: badb8a0a0072_create_users_and_roles_tables.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  AppShell.tsx  index.css  main.tsx
frontend/src/components/map/: Map.tsx
frontend/src/hooks/: useFeatureInfo.ts  useMapLayers.ts  useRuler.ts
frontend/src/pages/: Login.tsx
frontend/src/pages/login/: Login.module.css  Login.tsx
frontend/src/pages/profile/: Profile.module.css  Profile.tsx
frontend/src/pages/register/: Register.module.css  Register.tsx
frontend/src/services/: api.ts
frontend/src/store/: auth.ts
frontend/src/types/: map.ts
frontend/src/utils/: map.ts
mapserver/conf/: geoportal.map
mapserver/maps/: geoportal.map
mapserver/maps/general/: boundary.map
mapserver/maps/tourism/: .gitkeep
(+27 files in other folders)
